<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/all"
            android:orderInCategory="1"
            android:title="@string/filter_all_songs"
            app:showAsAction="always" />

        <item
            android:id="@+id/remote"
            android:orderInCategory="2"
            android:title="@string/filter_remote_songs"
            app:showAsAction="always" />

        <item
            android:id="@+id/local"
            android:orderInCategory="3"
            android:title="@string/filter_local_songs"
            app:showAsAction="always" />
    </group>
</menu>